# lifx-configurator

./: .gitignore  CMakeLists.txt  README.md  control-lifx  lifx-configurator  main.cpp
legacy/: socket.cpp  socket.h
